CMDBuild 2.4.3 (released YYYY/MM/DD)


NEW FEATURES

 * Print dialog on Relations Graph: current card and relations report

 * "Class" and "Activity" must not be visible within translations table and CSV export


FIXES

 * Gis: Fault on Geo Server Layers

 * Cannot see all cards using a default group between two groups when one has row privileges and the other no one

 * AdditionalActivityLabel metadata not correctly managed if relative attribute is not displayed in grid

 * Origin and destination comboboxes no more searchable in domains UI

 * OpenReport widget error on RTF or ODT format print

 * DataView SQL grid print button doesn't print report

 * ReferenceFields store load errors while sending not resolved CQL strings

 * ActivitySubsetId workflow metadata typo

 * Classes UI history tab error

 * Wrong activity selection after going on completed state

 * Workflow attachment tab translation variable error





CMDBuild 2.4.2 (released 2016/10/18)


NEW FEATURES

 * "Show language choice" configuration not readed at login page

 * Advanced filters management from REST web services

 * Notification of errors by email

 * Performance improvements to queries

 * Preselection of workflow activities

 * Simple filter support for processes routes

 * Client performance improvements

 * Metadata for functions through REST interface

 * Added Greek translation

 * Management of geometric attributes through REST API

 * Management of relation attributes through SOAP API

 * Information about the filter of the nodes of domain trees through REST API

 * To field no more required in create/edit email tab window

 * GIS thematisms: puntual and range thematic analysis

 * GIS performance's improvements

 * Printing of relation graph


FIXES

 * Software version string visually displayed in half on login panel

 * Selected tab reset on class change in administration Classes module

 * Classes geographical attributes tab no zoom levels validation
