@@ -15,6 +15,7 @@
 		config: {
 			activitySubsetId: 'ActivitySubsetId', // Workflow
 			additionalActivityLabel: 'AdditionalActivityLabel', // Workflow
+			nextActivitySubsetId: 'NextActivitySubsetId', // Workflow
 			selectedAttributesGroup: 'SelectedAttributesGroup' // Workflow
 		},
 
